De-duplication of unqualified statements with qualified counterparts

--- a/sling/nlp/kb/app/index.html
+++ b/sling/nlp/kb/app/index.html
@@ -6,7 +6,7 @@
   <title>SLING Knowledge base</title>
   <link rel="icon" href="/common/image/appicon.ico" type="image/x-icon" />
   <script type="module" src="/common/lib/material.js"></script>
-  <script type="module" src="kb.js"></script>
+  <script type="module" src="/kb/kb.js"></script>
 </head>
 <body>
   <kb-app id="app">
