Cloak web page until loaded

--- a/sling/nlp/kb/app/index.html
+++ b/sling/nlp/kb/app/index.html
@@ -8,7 +8,7 @@
   <script type="module" src="/common/lib/material.js"></script>
   <script type="module" src="/kb/kb.js"></script>
 </head>
-<body>
+<body style="display: none;">
   <kb-app id="app">
     <one-of id="layout" selected=".desktop">
 
