Image gallery in knowledge browser

--- a/sling/nlp/kb/app/index.html
+++ b/sling/nlp/kb/app/index.html
@@ -58,9 +58,17 @@
 
             <md-column-layout style="flex: 1 1 33%;">
 
-              <!-- Item picture card -->
-              <kb-picture-card id="picture">
-              </kb-picture-card>
+              <!-- Item photo gallery -->
+              <kb-gallery-card id="gallery">
+                <div id="picture" tabindex="0">
+                  <md-icon class="left" icon="navigate_before"></md-icon>
+                  <div id="photo-box">
+                    <md-image class="photo"></md-image>
+                    <md-text id="caption"></md-text>
+                  </div>
+                  <md-icon class="right" icon="navigate_next"></md-icon>
+                </div>
+              </kb-gallery-card>
 
               <!-- Item references card -->
               <kb-xref-card id="xrefs">
