Fix ambiguous tag id

--- a/sling/nlp/kb/app/index.html
+++ b/sling/nlp/kb/app/index.html
@@ -126,7 +126,7 @@
             </kb-document-card>
 
             <!-- Item picture card -->
-            <kb-picture-card id="picture">
+            <kb-picture-card id="picturex">
             </kb-picture-card>
 
             <!-- Item properties card -->
