KB browser lightbox

--- a/sling/nlp/kb/app/index.html
+++ b/sling/nlp/kb/app/index.html
@@ -159,6 +159,21 @@
       </md-column-layout>
     </one-of>
   </kb-app>
+
+  <!-- Lightbox -->
+  <kb-lightbox id="lightbox" tabindex="1">
+    <span class="close">&times;</span>
+    <div class="content">
+      <div class="image">
+        <md-text class="counter"></md-text>
+        <img class="photo">
+      </div>
+      <a class="prev">&#10094;</a>
+      <a class="next">&#10095;</a>
+      <div class="legend"><md-text class="caption"></md-text></div>
+    </div>
+  </kb-lightbox>
+
 </body>
 </html>
 
