Fix URL encoding for fetching from media service

--- a/sling/nlp/kb/app/index.html
+++ b/sling/nlp/kb/app/index.html
@@ -166,7 +166,7 @@
     <div class="content">
       <div class="image">
         <md-text class="counter"></md-text>
-        <img class="photo">
+        <img class="photo" referrerpolicy="no-referrer">
       </div>
       <a class="prev">&#10094;</a>
       <a class="next">&#10095;</a>
