--- a/sling/nlp/kb/app/index.html
+++ b/sling/nlp/kb/app/index.html
@@ -161,16 +161,21 @@
   </kb-app>
 
   <!-- Lightbox -->
-  <kb-lightbox id="lightbox" tabindex="1">
-    <span class="close">&times;</span>
+  <kb-lightbox id="lightbox">
     <div class="content">
       <div class="image">
-        <md-text class="counter"></md-text>
         <img class="photo" referrerpolicy="no-referrer">
+        <md-text class="size"></md-text>
+        <span class="close">&times;</span>
+        <div class="source">
+          <md-text class="nsfw"></md-text>
+          <md-text class="domain"></md-text>
+        </div>
+        <md-text class="counter"></md-text>
+        <a class="prev">&#10094;</a>
+        <a class="next">&#10095;</a>
       </div>
-      <a class="prev">&#10094;</a>
-      <a class="next">&#10095;</a>
-      <div class="legend"><md-text class="caption"></md-text></div>
+      <md-text class="caption"></md-text>
     </div>
   </kb-lightbox>
 
