Maximize photo size in lightbox

--- a/sling/nlp/kb/app/index.html
+++ b/sling/nlp/kb/app/index.html
@@ -162,7 +162,8 @@
       <div class="image">
         <img class="photo" referrerpolicy="no-referrer">
         <md-text class="size"></md-text>
-        <span class="close">&times;</span>
+        <md-icon-button class="close" icon="close"></md-icon-button>
+
         <div class="source">
           <md-text class="nsfw"></md-text>
           <md-text class="domain"></md-text>
