Copyright notice on non-free images

--- a/sling/nlp/kb/app/index.html
+++ b/sling/nlp/kb/app/index.html
@@ -165,8 +165,9 @@
         <md-icon-button class="close" icon="close"></md-icon-button>
 
         <div class="source">
+          <md-link class="domain" newtab="1" external="1"></md-link>
+          <kb-copyright class="copyright"></kb-copyright>
           <md-text class="nsfw"></md-text>
-          <md-text class="domain"></md-text>
         </div>
         <md-text class="counter"></md-text>
         <a class="prev">&#10094;</a>
