Multiple input files in reader tasks

--- a/sling/db/app/index.html
+++ b/sling/db/app/index.html
@@ -36,10 +36,9 @@
               <md-data-field field="dir">Directory</md-data-field>
               <md-data-field field="records" style="text-align: right">Records</md-data-field>
               <md-data-field field="size" style="text-align: right">Size</md-data-field>
+              <md-data-field field="shards" style="text-align: right">Shards</md-data-field>
               <md-data-field field="dirty" style="text-align: center">Dirty</md-data-field>
               <md-data-field field="bulk" style="text-align: center">Bulk</md-data-field>
-              <md-data-field field="read_only" style="text-align: center">Read-only</md-data-field>
-              <md-data-field field="timestamped" style="text-align: center">Timestamped</md-data-field>
               <md-data-field field="deletions" style="text-align: right">Deletions</md-data-field>
               <md-data-field field="index_capacity" style="text-align: right">Index capacity</md-data-field>
               <md-data-field field="epoch">Epoch</md-data-field>
