Fix tombstone counting bug in db index

--- a/sling/db/app/index.html
+++ b/sling/db/app/index.html
@@ -8,7 +8,7 @@
   <script type="module" src="/common/lib/material.js"></script>
   <script type="module" src="dbadmin.js"></script>
 </head>
-<body>
+<body style="display: none">
   <db-app id="app">
     <md-column-layout>
 
