Search item terms

--- a/sling/task/app/index.html
+++ b/sling/task/app/index.html
@@ -50,7 +50,7 @@
         <dashboard-counters id="counters">
           <md-card>
             <md-data-table id="counter-table">
-              <md-data-field field="counter">Name</md-data-field>
+              <md-data-field field="counter">Counter</md-data-field>
               <md-data-field field="value" style="text-align: right">Value</md-data-field>
               <md-data-field field="rate" style="text-align: right">Rate (/s)</md-data-field>
             </md-data-table>
