JSON and SLING importer plug-ins

--- a/sling/db/app/index.html
+++ b/sling/db/app/index.html
@@ -6,6 +6,7 @@
   <title>SLINGDB</title>
   <link rel="icon" href="/common/image/appicon.ico" type="image/x-icon" />
   <script type="module" src="/common/lib/material.js"></script>
+  <script type="module" src="/common/lib/oneof.js"></script>
   <script type="module" src="dbadmin.js"></script>
 </head>
 <body style="display: none">
