--- a/sling/nlp/document/app/analyzer.html
+++ b/sling/nlp/document/app/analyzer.html
@@ -6,6 +6,7 @@
   <title>SLING Document Analyzer</title>
   <link rel="icon" href="/common/image/appicon.ico" type="image/x-icon" />
   <script type="module" src="/common/lib/material.js"></script>
+  <script type="module" src="/common/lib/oneof.js"></script>
   <script type="module" src="analyzer.js"></script>
 </head>
 <body>
