--- a/sling/task/app/index.html
+++ b/sling/task/app/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" href="/common/image/appicon.ico" type="image/x-icon" />
   <script type="module" src="/common/lib/material.js"></script>
   <script type="module" src="dashboard.js"></script>
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 </head>
 <body>
   <dashboard-app id="app">
@@ -26,49 +27,7 @@
     </md-toolbar>
 
     <md-content>
-      <md-row-layout>
-
-        <dashboard-jobs id="jobs">
-          <md-card>
-            <md-data-table id="job-table">
-              <md-data-field field="select" html=true style="padding: 0"></md-data-field>
-              <md-data-field field="job">Job</md-data-field>
-              <md-data-field field="name">Name</md-data-field>
-              <md-data-field field="time" style="text-align: right">Time</md-data-field>
-              <md-data-field field="status" style="word-break: break-all; white-space: normal">Status</md-data-field>
-            </md-data-table>
-          </md-card>
-        </dashboard-jobs>
-        <md-spacer></md-spacer>
-        <dashboard-perf id="perf">
-        </dashboard-perf>
-
-      </md-row-layout>
-
-      <dashboard-counters id="counters">
-        <md-card>
-          <md-data-table id="counter-table">
-            <md-data-field field="counter">Counter</md-data-field>
-            <md-data-field field="value" style="text-align: right">Value</md-data-field>
-            <md-data-field field="rate" style="text-align: right">Rate (/s)</md-data-field>
-          </md-data-table>
-        </md-card>
-      </dashboard-counters>
-
-      <dashboard-channels id="channels">
-        <md-card>
-          <md-data-table id="channel-table">
-            <md-data-field field="channel">Channel</md-data-field>
-            <md-data-field field="direction">Direction</md-data-field>
-            <md-data-field field="key_bytes" style="text-align: right">Key bytes</md-data-field>
-            <md-data-field field="value_bytes" style="text-align: right">Value bytes</md-data-field>
-            <md-data-field field="bandwidth" style="text-align: right">Bandwidth</md-data-field>
-            <md-data-field field="messages" style="text-align: right">Messages</md-data-field>
-            <md-data-field field="throughput" style="text-align: right">Throughput</md-data-field>
-            <md-data-field field="shards" style="text-align: right">Shards</md-data-field>
-          </md-data-table>
-        </md-card>
-      </dashboard-channels>
+      <dashboard-status id="status"></dashboard-status>
     </md-content>
   </dashboard-app>
 </body>
