Job report in scheduler

--- a/sling/task/app/index.html
+++ b/sling/task/app/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" href="/common/image/appicon.ico" type="image/x-icon" />
   <script type="module" src="/common/lib/material.js"></script>
   <script type="module" src="dashboard.js"></script>
-  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+  <script src="https://www.gstatic.com/charts/loader.js"></script>
 </head>
 <body>
   <dashboard-app id="app">
