Use SLING subtokenizer for BERT models

--- a/sling/db/app/index.html
+++ b/sling/db/app/index.html
@@ -73,8 +73,10 @@
             <md-data-field field="put" style="text-align: right">PUTs</md-data-field>
             <md-data-field field="del" style="text-align: right">DELETEs</md-data-field>
             <md-data-field field="next" style="text-align: right">NEXTs</md-data-field>
-            <md-data-field field="read" style="text-align: right">Bytes read</md-data-field>
-            <md-data-field field="write" style="text-align: right">Bytes written</md-data-field>
+            <md-data-field field="recread" style="text-align: right">Records read</md-data-field>
+            <md-data-field field="recwrite" style="text-align: right">Records written</md-data-field>
+            <md-data-field field="byteread" style="text-align: right">Bytes read</md-data-field>
+            <md-data-field field="bytewrite" style="text-align: right">Bytes written</md-data-field>
             <md-data-field field="hit" style="text-align: right">HITs</md-data-field>
             <md-data-field field="miss" style="text-align: right">MISSes</md-data-field>
           </md-data-table>
