--- a/wikifunc/wikifunc.html
+++ b/wikifunc/wikifunc.html
@@ -7,7 +7,7 @@
 
 <script>
 
-var wiki = new WikiFunctions();
+var wiki = new WikiFunctions({annotate: true, loader: cached_loader});
 
 async function oncompile() {
   let code;
